# clion-iar-stm8-demo

./: CMakeLists.txt  CMakePresets.json  README.md  lnkstm8s103k3.icf  main.c
